# R-Agent

./: .gitignore  README.md  pyproject.toml
demo/cases/: demo1.json  demo2_negative.json  demo3_ambiguous_roi.json
docs/: architecture.md
pathology_copilot/: __init__.py  cli.py  config.py  llm.py  orchestrator.py  schemas.py  state.py
pathology_copilot/agents/: __init__.py  executor.py  planner.py  schema_report.py  self_critic.py
pathology_copilot/base_models/: __init__.py  pathology_vit.py  pathology_vlm.py
pathology_copilot/experts/: __init__.py  base.py  cancer_detection.py  grading.py  mutation_prediction.py  registry.py  subtype_classifier.py
pathology_copilot/tools/: __init__.py  base.py  domain_models.py  knowledge_tools.py  registry.py  vision_primitives.py  vlm_tool.py
tests/: test_executor.py  test_orchestrator_retry.py  test_planner.py  test_schema_report.py  test_self_critic.py  test_tools.py
