[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pathology-copilot"
version = "0.1.0"
description = "Pathology AI Copilot skeleton: Planner-Executor-Critic-Report agent over mocked ViT/VLM/experts."
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pathology-copilot = "pathology_copilot.cli:app"

[tool.setuptools.packages.find]
include = ["pathology_copilot*"]
